2008-08-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libmisc/monitor/mon-network.c: Use memset instead of bzero.

2008-08-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libmisc/shell/internal.h: Don't include "config.h".
	Adjust header guard.
	* libmisc/shell/cmp-ls.c, libmisc/shell/err.c, 
	libmisc/shell/errx.c, libmisc/shell/filemode.c, 
	libmisc/shell/fts.c, libmisc/shell/main_cp.c, 
	libmisc/shell/main_ls.c, libmisc/shell/main_mv.c,
	libmisc/shell/main_rm.c, libmisc/shell/print-ls.c,
	libmisc/shell/pwcache.c, libmisc/shell/shellconfig.c,
	libmisc/shell/utils-cp.c, libmisc/shell/utils-ls.c,
	libmisc/shell/verr.c, libmisc/shell/verrx.c,
	libmisc/shell/vis.c, libmisc/shell/vwarn.c,
	libmisc/shell/vwarnx.c, libmisc/shell/warn.c,
	libmisc/shell/warnx.c: Include "config.h".

2008-08-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libmisc/monitor/mon-network.c, libmisc/monitor/mon-part.c,
	libmisc/monitor/mon-region.c, libmisc/monitor/mon-sema.c:
	Include "config.h".

2008-08-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libmisc/shell/main_ifconfig.c: Use memset instead of bzero.
	* ftpd/ftpd.c: Don't use annonymous unions.

2008-08-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libblock/src/flashdisk.c: Remove bool, true, false.

2008-08-20	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libmisc/dummy/dummy.c: Add missing initializers.
	* score/src/threadinitialize.c: Change type of loop counter.

2008-08-20	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libcsupport/src/error.c, libmisc/dummy/dummy.c,
	rtems/src/rtemsobjectgetapiclassname.c,
	rtems/src/rtemsobjectgetapiname.c: Add 0 for missing initializers.

2008-08-20	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* include/rtems/status-checks.h: Fixed integer conversion warning.

2008-08-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Abort if stdbool.h is not c99 compliant.

2008-08-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* pppd/pppd.h: Use stdbool.h. Remove local bool.
